--- a/dev.md.html
+++ b/dev.md.html
@@ -365,6 +365,20 @@ Command          | Description
 :vsp[lit]        | vertically split the current window
 :noh[lsearch]    | stop the highlighting
 
+## window
+~~~
+:above help
+:below help
+:top help
+:bot help
+:help CTRL-W_r
+~~~
+
+Command | Description
+---     | ---
+C-W r   | rotate windows downwards/rightwards
+C-W J   | bot window
+
 <meta name="keywords" content="*memo_vim.resize*">
 ## resize window
 Command               | Description
