--- a/prog.md.html
+++ b/prog.md.html
@@ -35,6 +35,11 @@ tags:
 <meta name="keywords" content="*memo_prog.cmake*">
 CMakeLists.txt
 =======================================================
+## module list
+~~~
+cmake --help-module-list
+~~~
+
 ## 環境変数
 ~~~
 set(VAR $ENV{VAR})
