--- a/cg.md.html
+++ b/cg.md.html
@@ -79,6 +79,9 @@ MeshLab
 <meta name="keywords" content="*memo_cg.blender*">
 Blender
 =======================================================
+## Disable in Renders
+- Filter > Disable in Renders
+
 ## Coordinate System
 - Right-handed coordinate system
   - X-right
@@ -88,6 +91,10 @@ Blender
   - x y z = x z -y
 
 ![blender](images/model_blender.jpg)
+
+## Create Sphere
+- Add > Mesh > UV Sphere
+- Object > Shade Smooth
 
 ## Key
 ### View
