--- a/my.md.html
+++ b/my.md.html
@@ -67,11 +67,11 @@ Keymap
 * +---+---+---+---+---+---+---+---+---+---+---+---+---+---+---+
 * |ESC|F1 |F2 |F3 |F4 |F5 |F6 |F7 |F8 |F9 |F10|F11|F12|Ins|Del|
 * +---+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+---+
-* |Tab  |   |   | E |   |   | Y | U |   | O | P |   |   |   BS|
+* |Tab  | Q |   | E |   |   | Y | U |   | O | P |   |   |   BS|
 * +-----+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-----+
-* |Ctrl   | A |   | D | F |   | H | J | K | L |   |   | Return|
+* |Ctrl   | A |   | D | F | G | H | J | K | L |   |   | Return|
 * +-------+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+---+---+
-* |Shift    |   | X |   |   |   | N |   |   |   |   |Zen  | Fn|
+* |Shift    |   | X |   |   | B | N |   |   |   |   |Zen  | Fn|
 * +-------+-+-+-+-+-+---+---+---+---+---+-+-+---+-+-+-+---+---+
 *         |LM |Alt|                       | LWin  |RM |
 *         +---+---+-----------------------+-------+---+
@@ -120,25 +120,27 @@ vim.win         | C-E                 | expand the current window
                 | C-X                 | delete the current window
 vim.move        | C-F                 | page down
                 | C-D                 | page up
-vim.hl          | C-U                 | quickhl
-                | C-Y                 | quickhl reset
 vim.other       | C-G                 | redraw screen, display info
                 | C-Q                 | exec the command in the register q
-                | C-P                 | CocList vimcommands
-                | C-A                 | x
-                | C-N                 | x
---- vim ---     |                     |
-vim.term        | C-O                 | terminal out
-vim.term        | i                   | terminal in
-vim.term        | C-Space             | whichkey in terminal
+                | C-A                 | [MyOpenNERDTree]
+                | C-B                 | [CocListResume]
+                | C-N                 | [MyTermSendCd]
+                | C-O                 | [MyOpenDir]
+                | C-U                 | [MyOpenURL]
+                | C-P                 | [quickhl]
+                | C-Y                 | [quickhl reset]
 vim             | Space               | whichkey
 vim             | TAB                 | nerdtree
 vim             | BS                  | easymotion
 --- vim ---     |                     |
+vim.term        | C-O                 | terminal out
+vim.term        | i                   | terminal in
+vim.term        | C-Space             | whichkey in terminal
+--- vim ---     |                     |
 vim.tab         | LMeta               | toggle maximize / half maximize window
 vim.tab         | Insert              | tabedit
 vim.tab         | Del                 | new terminal
-Windows         | RMeta               | tabnext
+vim.tab         | RMeta               | tabnext
 
 <meta name="keywords" content="*memo_my.vim.command*">
 Vim Command
